app/assets/stylesheets/old_elements/custom_objects.css.scss
/* ... */
  // RADIOBUTTON

  /*
    <a href="#somewhere" class="radiobutton {selected}">
      <span class="radio"></span>
      Start importing some data
    </a>
  */

  .radiobutton {
    @include inline-block();
    vertical-align:middle;
    font-weight:bold;
    color:#397DB9;
    outline:none;


    &.hidden_radio span.radio { display:none; }
    &.hidden_radio {
      font-weight: normal;
      cursor: default;
      &:hover { text-decoration:none; }
    }

    span.radio {
      position:relative;
      @include inline-block();
      vertical-align:top;
      @include size(10px);
      margin:2px 7px 0 0;

      @include border-radius(10px);
      border:1px solid #397DBA;
      background:white;

      &:before {
        display:none;
        content:' ';
        position:absolute;
        top:2px;
        left:2px;
        @include size(6px);
        background:#333333;
        @include border-radius(25px);
      }
    }

    &:hover, &:focus {
      span.radio{
        border-color:#333333;
        &:before {
          display:block;
        }
      }
    }

    &.selected {
      border-color:#333333;
      color:#333333;

      span.radio{
        border-color:#333333;
        &:before { display:block; }
      }

      &:hover, &:focus {
        cursor:default;
        text-decoration:none;
      }
    }

    &.disabled {
      text-decoration:none;
      color:#397DBA;

      span.radio{
        border-color:#397DBA;
        &:before {display:none;}
      }
      &:hover, &:focus {cursor:default;}

      &.selected {
        span.radio:before {display:block;}
      }
    }
  }



  // CHECKBOX

  /*
    <a href="#title?" class="checkbox {enabled}">
      <span class="check"></span>
      title?
    </a>
  */

  .checkbox {
    @include inline-block();
    vertical-align:middle;
    text-decoration:none;

    span.check {
      position:relative;
      @include inline-block();
      vertical-align:top;
      width:10px;
      height:10px;
      margin:0;
      @include border-radius(3px);
      border:1px solid #999999;
      background:white;

      &:before {
        display:none;
        content:' ';
        position:absolute;
        top:1px;
        left:1px;
        width:9px;
        height:8px;
        @include elements-sprite(checkbox);
      }
    }

    &:hover {
      text-decoration:none;
    }

    &.enabled {
      span.check{
        &:before {
          display:block;
        }
      }
    }

    &.disabled {

      &.light:hover { color: #999; }

      span.check{
        &:before {
          display:none;
        }
      }
    }
  }



  // SWITCH (ON/OFF)

  /*
    <a href="#switch" class="switch {enabled}">
      <span class="handle"></span>
    </a>
  */

  .switch, .form_switch {
    position:relative;
    @include inline-block();
    @include text-indent();
    vertical-align:middle;
    width:29px;
    height:15px;
    @include border-radius(12px);
    @include transform-style("linear");
    @include transition-property("background");
    @include transition-duration(180ms);
    text-decoration:none;
    border:1px solid #44759E;

    &:before {
      position:absolute;
      content:' ';
      top:0;
      left:0;
      width:100%;
      height:100%;
      @include border-radius(12px);
      @include background(linear-gradient(rgba(black,0.18),rgba(black,0)));
      z-index:0;
    }

    span.handle {
      position:absolute;
      top:1px;
      left:15px;
      width:11px;
      height:11px;
      @include border-radius(12px);
      border:1px solid #44759E;
      background:#F2F2F2;
      z-index:2;
      @include transform-style("linear");
      @include transition-property("left");
      @include transition-duration(180ms);
    }

    &.enabled {
      border-color:#44759E;
      background:#56AFEF;
      span.handle {
        left:15px;
        border-color:#44759E;
      }
    }

    &.disabled {
      @include opacity(1);
      border-color:#CCCCCC;
      background:#D8D8D8;
      span.handle {
        left:2px;
        border-color:#999999;
      }
    }

    &:hover {cursor:pointer!important;}

    // Working
    &.working {
      @include opacity(0.5);
      &:hover {cursor:default!important;}
    }

    // Small type
    &.small {
      width:23px;
      height:12px;

      span.handle {
        position:absolute;
        top:0px;
        left:11px;
        width:10px;
        height:10px;
        @include border-radius(10px);
      }

      &.disabled span.handle { left:1px; }
      &.enabled span.handle { left:11px; }
    }
  }


  // ROUNDED BUTTON (WHITE, ORANGE, GREEN, ...)

  /*
    <a href="#xxxx" class="rounded white {enabled}"></a>
  */

  .rounded {
    padding:3px 12px;
    background:white;
    @include border-radius(25px);
    font-weight:bold;
    font-size:11px;
    line-height:12px;
    color:#3474AF;
    text-transform: uppercase;
    @include box-shadow(rgba(black,0.09) 0 0 2px 2px);

    &:hover {text-decoration:none;}

    &.white {
      &:hover {
        text-decoration:none;
        @include box-shadow(rgba(black,0.19) 0 0 2px 2px);
      }
    }

    &.orange {
      background:#FF9326;
      color:white;
      text-shadow:none;
      &:hover {@include box-shadow(rgba(black,0.19) 0 0 2px 2px);}
    }

    &.green {
      background:#97C341;
      color:white;
      text-shadow:none;
      &:hover {@include box-shadow(rgba(black,0.19) 0 0 2px 2px);}
    }
  }

